@@ -5,8 +5,8 @@
 # -test del_node, del_edge methods
 # -test Common.set method
 import argparse
-import datetime
 from hashlib import sha256
+import importlib
 import functools
 import io
 import os
@@ -427,6 +427,22 @@ class TestGraphAPI(PydotTestCase):
 
     def test_version(self):
         self.assertIsInstance(pydot.__version__, str)
+
+    def test_logging_init(self):
+        with self.assertLogs("pydot", level="DEBUG") as cm:
+            importlib.reload(pydot)
+            importlib.reload(pydot.core)
+            importlib.reload(pydot.dot_parser)
+        self.assertEqual(
+            cm.output,
+            [
+                "DEBUG:pydot:pydot initializing",
+                "DEBUG:pydot:pydot %s" % pydot.__version__,
+                "DEBUG:pydot.core:pydot core module initializing",
+                "DEBUG:pydot.dot_parser:pydot dot_parser module initializing",
+            ],
+        )
+        importlib.reload(pydot)
 
 
 class TestShapeFiles(PydotTestCase):
